k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: portfolio
